--- a/index.html
+++ b/index.html
@@ -8,14 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Inter', sans-serif;
-        }
-        h1, h2, h3 {
-            font-family: 'Playfair Display', serif;
-        }
-    </style>
+
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 <body class="bg-[#F5F0E1] text-[#4A3F35]">
 
