--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body class="bg-[#F5F0E1] text-[#4A3F35]">
 
     <!-- Header & Hero Section -->
-    <header class="bg-cover bg-center bg-fixed h-screen relative" style="background-image: url('https://placehold.co/1920x1080/c4a484/333333?text=Suasana+Kedai');">
+    <header class="bg-cover bg-center bg-fixed h-screen relative" style="background-image: url('img/kopi-header.jpg');">
         <div class="absolute inset-0 bg-black bg-opacity-50"></div>
         <div class="container mx-auto px-6 h-full flex flex-col justify-center items-center text-center relative z-10">
             <h1 class="text-5xl md:text-7xl text-white font-bold leading-tight mb-4">
-                Selamat Datang di Kopi Senja
+                Selamat Datang <br /> di Kopi Senja
             </h1>
             <p class="text-xl text-gray-200 max-w-2xl mb-8">
                 Secangkir ketenangan dan kebahagiaan di setiap tegukan. Kami menyajikan kopi terbaik dari biji pilihan nusantara.
