Mengunpdate tulisan pada header

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="absolute inset-0 bg-black bg-opacity-50"></div>
         <div class="container mx-auto px-6 h-full flex flex-col justify-center items-center text-center relative z-10">
             <h1 class="text-5xl md:text-7xl text-white font-bold leading-tight mb-4">
-                Selamat Datang <br /> di Kopi Senja
+                Selamat Datang <br /> di <span>Kopi Senja</span>
             </h1>
             <p class="text-xl text-gray-200 max-w-2xl mb-8">
                 Secangkir ketenangan dan kebahagiaan di setiap tegukan. Kami menyajikan kopi terbaik dari biji pilihan nusantara.
