Update foto pada header dan menambah img pada folder img

--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
     <!-- Menu Section -->
     <main id="menu" class="py-20 bg-[#E9E2D0]">
         <div class="container mx-auto px-6">
-            <h2 class="text-4xl font-bold text-center mb-12 text-[#A0522D]">Menu Andalan Kami</h2>
+            <h2 class="text-5xl font-bold text-center mb-12">Menu Andalan Kami</h2>
             
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10">
                 <!-- Menu Item 1: Americano -->
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden transform hover:-translate-y-2 transition-transform duration-300">
-                    <img src="https://placehold.co/600x400/512a15/ffffff?text=Americano" alt="Gambar Kopi Americano" class="w-full h-56 object-cover">
+                    <img src="img/coffee-americano.jpg" alt="Gambar Kopi Americano" class="w-full h-56 object-cover">
                     <div class="p-6">
                         <h3 class="text-2xl font-bold mb-2 text-[#4A3F35]">Americano</h3>
                         <p class="text-gray-600 mb-4">
@@ -50,7 +50,7 @@
 
                 <!-- Menu Item 2: Kopi Gula Aren -->
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden transform hover:-translate-y-2 transition-transform duration-300">
-                    <img src="https://placehold.co/600x400/8d5524/ffffff?text=Kopi+Gula+Aren" alt="Gambar Kopi Gula Aren" class="w-full h-56 object-cover">
+                    <img src="img/susu-gula-aren.jpg" alt="Gambar Kopi Gula Aren" class="w-full h-56 object-cover">
                     <div class="p-6">
                         <h3 class="text-2xl font-bold mb-2 text-[#4A3F35]">Kopi Susu Gula Aren</h3>
                         <p class="text-gray-600 mb-4">
@@ -64,7 +64,7 @@
 
                 <!-- Menu Item 3: Caffe Latte -->
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden transform hover:-translate-y-2 transition-transform duration-300">
-                    <img src="https://placehold.co/600x400/c4a484/333333?text=Caffe+Latte" alt="Gambar Caffe Latte" class="w-full h-56 object-cover">
+                    <img src="img/coffee-latte.jpg" alt="Gambar Caffe Latte" class="w-full h-56 object-cover">
                     <div class="p-6">
                         <h3 class="text-2xl font-bold mb-2 text-[#4A3F35]">Caffè Latte</h3>
                         <p class="text-gray-600 mb-4">
