--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <a href="#menu" class="bg-[#A0522D] text-white font-bold py-3 px-8 rounded-full text-lg hover:bg-[#804224] transition duration-300">
                 Lihat Menu Kami
             </a>
+            <img src="icon/scroll-icon-white.svg" alt="Scroll Icons Bottom" class="absolute bottom-10 w-5 h-5 animate-bounce">
         </div>
     </header>
 
